Add ->terminate and ->finalize methods to the Formatter
By default, these do nothing, but they're necessary to implement any sort of
document-oriented format. Otherwise there's no chance for the formatter to
"close" the output. For example, if you're generating XML you need a chance to
close all open tags.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,11 @@
 {{$NEXT}}
 
+    - Formatters now have terminate() and finalize() methods. These are called
+      when there is a skip_all or bail event (terminate) or when a test suite
+      is exiting normally (finalize). This allows formatters to finalize their
+      output, which is important for any sort of document-oriented format (as
+      opposed to a stream format like TAP). (#723)g
+
 1.302058  2016-09-21 10:46:13-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Mask warning when comparing $@ in Test2::API::Context
