--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from last trial
+
 1.302058  2016-09-21 10:46:13-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Mask warning when comparing $@ in Test2::API::Context
