--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+    - Fix some docs
+    - Fix defer.t to work in windows
+    - Fix stack stomping bug triggered by certain Term::Readkey conditions
+
 0.000059  2016-09-15 13:00:03-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Create Test2::Compare::Negatable
