Don't check that a formatter is a TAP formatter, just that it supports set_no_{header,diag}
If we insist on checking that the formatter ->isa('Test2::Formatter::TAP'), we
end up _always_ warning whenever an alternative formatter is used with
Test::Builder. This doesn't seem to achieve anything useful, since there's
nothing the implementor of the alternative formatter can do to shut up the
warning.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,9 @@
 {{$NEXT}}
 
+    - Removed a warning when using a non-TAP formatter with Test::Builder
+      about the formatter not "no_header" and "no_diag". This happened even if
+      the alternative formatter class implemented these attributes.
+
 1.302060  2016-09-25 12:46:46-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Formatters now have terminate() and finalize() methods. These are called
