--- a/Changes
+++ b/Changes
@@ -3,6 +3,9 @@
     - Removed a warning when using a non-TAP formatter with Test::Builder
       about the formatter not "no_header" and "no_diag". This happened even if
       the alternative formatter class implemented these attributes.
+    - When finalize is called on a formatter, it now receives one more
+      argument, a boolean indicating whether or not the call is for a subtest
+      or not.
 
 1.302060  2016-09-25 12:46:46-07:00 America/Los_Angeles (TRIAL RELEASE)
 
