--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from last trial
+
 1.302061  2016-09-30 14:49:19-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Removed a warning when using a non-TAP formatter with Test::Builder
