--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix double release when 'throw' is used in context_do()
+
 1.302062  2016-10-20 06:16:08-07:00 America/Los_Angeles
 
     - No changes from last trial
