Better handling of events that cause fail but do not bump count
Failure count was being bumped by all events that cause fail. This could
result in diagnostics reporting failed tests even when all ok's passed.

This should be a bit more clear

Fixes #728

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Fix test that used 'parent'
+    - Better handling of non-bumping failures (#728)
 
 1.302063  2016-10-23 21:31:20-07:00 America/Los_Angeles (TRIAL RELEASE)
 
