Use base instead of parent in recent test
Fixes #730

Test::Builder/Test2 needs to work as far back as 5.8, 'parent' was not
part of core back then.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix test that used 'parent'
+
 1.302063  2016-10-23 21:31:20-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix double release when 'throw' is used in context_do()
