Better handling of diag vs info in ->send_event
Fixes #727

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Better handling of info vs diag in ->send_event
     - Fix test that used 'parent'
     - Better handling of non-bumping failures (#728)
 
