Fix oldest reported bug (cmp_ok confusing output)
Fixes #6

This bug has been around so long that it has had patches that are no
longer reachable. This fixes it.

--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix the oldest bug still in the bug list (#6)
+      This fixes cmp_ok output is some confusing cases
+
 1.302064  2016-10-24 21:03:24-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Repo management improvements
