--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Import 'context' into Test2::IPC, it is used by 'cull'
+
 1.302065  2016-10-30 11:54:37-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Set the TEST_ACTIVE env var to true
