--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix context test for recent blead.
+
 1.302066  2016-11-08 07:58:39-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Handle cases where SysV IPC can be available but not enabled
