--- a/Changes
+++ b/Changes
@@ -1,6 +1,9 @@
 {{$NEXT}}
 
     - Fix mocked objects so that they respond properly to ->can when using AUTOLOAD.
+    - Fix some meta-files
+    - Small build improvements
+    - Minor fixes
 
 0.000060  2016-09-25 12:38:43-07:00 America/Los_Angeles
 
