--- a/Changes
+++ b/Changes
@@ -4,6 +4,7 @@
       Test2::Compare::Event and the comparison failed
     - Fix tests for small terminals (#106)
     - Enhance the table library
+    - UTF8 plugin does not set STDERR/STDOUT
 
 0.000061  2016-11-26 12:39:14-08:00 America/Los_Angeles
 
