--- a/Changes
+++ b/Changes
@@ -2,7 +2,7 @@
 
 0.000062  2016-12-03 14:03:44-08:00 America/Los_Angeles (TRIAL RELEASE)
 
-    - An event without a trace object would an exception when using
+    - An event without a trace object throw would an exception when using
       Test2::Compare::Event and the comparison failed
     - Fix tests for small terminals (#106)
     - Enhance the table library
