--- a/Changes
+++ b/Changes
@@ -1,5 +1,10 @@
 {{$NEXT}}
 
+    - Added two new event classes, Test2::Event::Encoding and
+      Test2::Event::TAP::Version. These are primarily being added for the
+      benefit of Test2::Harness now, but they could be useful for other Test2
+      event consumer tools in the future. Implemented by Dave Rolsky (#743).
+
 1.302069  2016-12-12 15:03:04-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Generate HashBase from Object::HashBase whcih has been split out
