--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Expose tools.pl as Test2::Tools::Tiny
+
 1.302071  2016-12-17 12:08:29-08:00 America/Los_Angeles
 
     - No changes since last trial release
