--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Move Test2::Util::Table to Term::Table
+
 0.000063  2016-12-17 12:11:39-08:00 America/Los_Angeles
 
     - No notable changes since the last trial release.
