--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - AUTHOR_TESTING a fragile test
+
 0.000064  2016-12-19 11:56:28-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Move Test2::Util::Table to Term::Table
