--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Move sub_info to Sub::Info
+
 0.000065  2016-12-19 19:46:47-08:00 America/Los_Angeles
 
     - AUTHOR_TESTING a fragile test
