--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes, just marking a stable release
+
 1.302074  2017-01-08 11:41:44-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add 'cid' to trace
