--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix crash when TB->reset used inside subtest
+
 1.302075  2017-01-10 19:39:28-08:00 America/Los_Angeles
 
     - No changes, just marking a stable release
