--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Revisit #637, fix rare race condition it created
+
 1.302076  2017-02-01 19:38:42-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix crash when TB->reset used inside subtest
