--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes from trial
+
 0.000068  2017-03-08 20:22:23-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Set the term size for all tests that use tables
