--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Revert Boolean overload fixes from djerius until they can be fixed
     - Do not mention Term::ReadKey in docs
     - Add Term::Size::Any to test report
 
@@ -10,6 +11,7 @@
 0.000068  2017-03-08 20:22:23-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Set the term size for all tests that use tables
+    - Boolean overload fixes from djerius
 
 0.000067  2017-01-03 19:41:52-08:00 America/Los_Angeles
 
