--- a/Changes
+++ b/Changes
@@ -1,5 +1,14 @@
 {{$NEXT}}
 
+    - Introduce 'Facets' for events
+    - Performance enhancements
+    - Upgrade inline HashBase
+    - Move Test2::Util::Trace to Test2::EventFacet::Trace
+    - Track hub id in Trace
+    - Remove Info event
+    - Add Pass and Fail events
+    - Remote Event JSON interface
+
 1.302083  2017-04-14 10:55:26-07:00 America/Los_Angeles
 
     - Update some breakage info for Test::More::Prefix and Test::DBIx::Class::Schema
