--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fixes for '. in @INC' changes (#768)
+
 1.302078  2017-03-01 15:24:12-08:00 America/Los_Angeles
 
     - No changes since last trial
