--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix threads timeout for older perls (as best we can)
+
 1.302080  2017-04-04 20:24:55-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Timeout when waiting for child procs and threads (#765)
