--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix test that incorrectly called private function as method
+
 1.302081  2017-04-06 10:39:37-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix threads timeout for older perls (as best we can)
