--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Update some breakage info for Test::More::Prefix and Test::DBIx::Class::Schema
+
 1.302082  2017-04-11 12:56:24-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix test that incorrectly called private function as method
