--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No Changes since last TRIAL
+
 1.302084  2017-04-29 20:42:48-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Better IO management
