--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No change since last trial
+
 0.000071  2017-06-10 13:40:27-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Introduce Test2::V# bundles
