Make it possible to disable event logging

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make it possible to turn off result logging in Test::Builder
+
 1.302085  2017-05-01 19:24:37-07:00 America/Los_Angeles
 
     - No Changes since last TRIAL
