--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix test that unintentionally required Test2::Suite
+
 1.302089  2017-07-09 20:51:19-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix plan in buffered subtest so that the facts say it is buffered
