--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Add 'new_root' constructor for formatters
+    - Add intercept_deep() to the API
+
 1.302090  2017-07-09 21:10:08-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix test that unintentionally required Test2::Suite
