--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     - Add 'new_root' constructor for formatters
     - Add intercept_deep() to the API
     - Fix bug in Version event
+    - Add 'number' attribute to assertion facet
 
 1.302090  2017-07-09 21:10:08-07:00 America/Los_Angeles (TRIAL RELEASE)
 
