--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No Changes from last release
+
 0.000019  2017-09-08 12:21:34-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix support for formatters that show buffered events
