--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last TRIAL release
+
 0.000076  2017-09-11 15:21:07-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add Test2::Tools::GenTemp
