--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Fix hub->process bug that could let an error pass
+    - Fix #789 (Modification of read only value)
 
 1.302096  2017-09-10 21:16:18-07:00 America/Los_Angeles
 
