Localize $^E in context
Fixes #780

--- a/Changes
+++ b/Changes
@@ -5,6 +5,7 @@
     - Fix typo in Test::Builder when looking for IPC (#777)
     - Fix #791, clone_io broke on scalar io layer
     - Fix #790 and #756, Exception event stingify exception
+    - Localize $^E in context (#780)
 
 1.302096  2017-09-10 21:16:18-07:00 America/Los_Angeles
 
