--- a/Changes
+++ b/Changes
@@ -1,6 +1,10 @@
 {{$NEXT}}
 
+    - (Colin Newell) Fix UTF8 issue with perl 5.10.0
+
 0.000078  2017-10-14 20:15:21-07:00 America/Los_Angeles (TRIAL RELEASE)
+
+    - Fix for TODO + new ok style
 
 0.000077  2017-09-12 07:49:16-07:00 America/Los_Angeles
 
