--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last TRIAL
+
 1.302102  2017-10-14 20:05:45-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix some TODO edge cases that were not previously accounted for
