--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last trial
+
 0.000079  2017-10-14 20:18:51-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - (Colin Newell) Fix UTF8 issue with perl 5.10.0
