--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last trial
+
 1.302104  2017-10-19 11:39:01-07:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Combine multiple diags into one event
