--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Allow regexp in Test::Tester
+
 1.302106  2017-10-20 20:42:43-07:00 America/Los_Angeles
 
     - Make version number in HashBase sane.
