--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix test breakage (from previous trial) on older perls
+
 1.302109  2017-11-17 09:35:48-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix some fragile tests
