--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Remove debugging from previous trial
+
 1.302110  2017-11-17 09:47:23-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix test breakage (from previous trial) on older perls
