Mark gh_16 AUTHOR_TESTING on version lower than 5.20
This test does something crazy. The check is important, but I keep
seeing false priblems with it that are hard to correct. I am making sure
it always runs for 5.20+, and also always when AUTHOR_TESTING is set.

Fact is most people are unlikely to have this problem, and the fix seems
to be pretty solid anyway. The problems here are that the test is kind
of crazy, specially for old perl versions that have other exception/END
bugs.

--- a/Changes
+++ b/Changes
@@ -1,6 +1,7 @@
 {{$NEXT}}
 
     - Fix SIGPIPE in IPC test
+    - Mark a test as usually AUTHOR_TESTING only
 
 1.302112  2017-11-20 06:43:16-08:00 America/Los_Angeles
 
