--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Added pre-subtest hook to Test2::API (#801 from dakkar)
+
 1.302113  2017-11-20 14:04:16-08:00 America/Los_Angeles
 
     - Fix SIGPIPE in IPC test
