--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix potential infinite hang in temp debugging
+
 0.000089  2017-11-26 11:16:15-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - More debugging
