Remove Files2 debugging

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Remove experiments from last several trials
+
 0.000090  2017-11-26 18:52:06-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix potential infinite hang in temp debugging
