--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No Changes since last trial
+
 1.302117  2017-11-27 14:10:53-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix event Out of Order bug
