--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last trial
+
 0.000091  2017-11-27 14:17:00-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Remove experiments from last several trials
