--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix IPC reload bug
+
 1.302118  2017-11-28 10:14:12-08:00 America/Los_Angeles
 
     - No Changes since last trial
