--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No Changes since last trial
+
 1.302119  2017-11-28 15:35:42-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix IPC reload bug
