--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No Changes since last trial
+
 0.000093  2017-11-28 20:21:09-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Minor test changes for thread safety
