Make it possible to disable IPC

--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make it possible ot disable IPC
+
 1.302122  2018-02-05 08:13:56-08:00 America/Los_Angeles
 
     - Add 'mode' ro render facet
