--- a/Changes
+++ b/Changes
@@ -1,6 +1,6 @@
 {{$NEXT}}
 
-    - Make it possible ot disable IPC
+    - Make it possible to disable IPC
 
 1.302122  2018-02-05 08:13:56-08:00 America/Los_Angeles
 
