--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since trial
+
 1.302124  2018-02-13 22:02:48-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix a test to skip without threads
