--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add Data::Dumper to dep list (#154)
+
 0.000103  2018-03-02 13:00:54-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - AsyncSubtest now works with UUIDs and adds other proper meta-data
