--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since the trial
+
 1.302127  2018-03-02 12:43:56-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Fix missing UUID in Test::Builder subtests
