--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make hubs tag events with a new facet
+
 1.302128  2018-03-05 09:26:53-08:00 America/Los_Angeles
 
     - No changes since the trial
