--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make sure event puts the uuid into the about facet
+
 1.302130  2018-03-07 08:07:54-08:00 America/Los_Angeles
 
     - No changes since last trial
