--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add rounded() and within() wrappers for approximate comparisons
+
 0.000106  2018-03-06 13:10:55-08:00 America/Los_Angeles
 
     - No changes since trial
