--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last trial
+
 1.302132  2018-03-09 15:43:51-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add method to validate facet data
