--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - No changes since last release
+
 0.000107  2018-03-09 15:43:30-08:00 America/Los_Angeles (TRIAL RELEASE)
 
     - Add rounded() and within() wrappers for approximate comparisons
