--- a/Changes
+++ b/Changes
@@ -1,8 +1,10 @@
 {{$NEXT}}
 
+    - Allow events from unattached processes in AsyncSubtest
+
 0.000109  2018-03-12 13:20:18-07:00 America/Los_Angeles (TRIAL RELEASE)
 
-    - Add AsyncSubtest retrieveal to hubs
+    - Add AsyncSubtest retrieval to hubs
 
 0.000108  2018-03-11 12:51:56-07:00 America/Los_Angeles
 
