--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Add test2_add_callback_testing_done to Test2::API
+
 1.302135  2018-03-29 22:53:00-07:00 America/Los_Angeles
 
     - No changes since last trial
