Switch Spec to use the testing_done callback

--- a/Changes
+++ b/Changes
@@ -1,5 +1,6 @@
 {{$NEXT}}
 
+    - Switch spec to use the testing_done callback
     - Update copyright dates
     - Finish the Anatomy manual section
 
