Finish the Tooling manual section

--- a/Changes
+++ b/Changes
@@ -3,6 +3,7 @@
     - Switch spec to use the testing_done callback
     - Update copyright dates
     - Finish the Anatomy manual section
+    - Finish the Tooling manual section
 
 0.000111  2018-03-14 12:37:45-07:00 America/Los_Angeles
 
