--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Fix typo
+
 0.000112  2018-04-19 07:15:40-07:00 America/Los_Angeles
 
     - Switch spec to use the testing_done callback
