--- a/Changes
+++ b/Changes
@@ -1,5 +1,7 @@
 {{$NEXT}}
 
+    - Make it safe to fork before events in IPC
+
 1.302136  2018-04-19 05:40:11-07:00 America/Los_Angeles
 
     - Add test2_add_callback_testing_done to Test2::API
