--- a/Changes
+++ b/Changes
@@ -1,5 +1,8 @@
 {{$NEXT}}
 
+    - Fix warning on undefined note/diag
+    - Improve an error message.
+
 0.000114  2018-04-19 08:39:56-07:00 America/Los_Angeles
 
     - Fix missing manual section
